# Home-Service-Robot

./: LICENSE  README.md
catkin_ws/: add_markers.sh  home_service.sh  install_env.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
catkin_ws/devel/include/marker_msg/: status.h
catkin_ws/devel/lib/add_markers/: add_markers
catkin_ws/devel/lib/pick_objects/: pick_objects
catkin_ws/devel/lib/pkgconfig/: marker_msg.pc  pick_objects.pc
catkin_ws/devel/lib/python2.7/dist-packages/marker_msg/msg/: _status.py
catkin_ws/devel/share/add_markers/cmake/: add_markersConfig.cmake
catkin_ws/devel/share/common-lisp/ros/marker_msg/msg/: _package.lisp  _package_status.lisp  marker_msg-msg.asd  status.lisp
catkin_ws/devel/share/gennodejs/ros/marker_msg/msg/: status.js
catkin_ws/devel/share/marker_msg/cmake/: marker_msg-msg-extras.cmake  marker_msg-msg-paths.cmake  marker_msgConfig.cmake
catkin_ws/devel/share/pick_objects/cmake/: pick_objectsConfig.cmake
catkin_ws/devel/share/roseus/ros/marker_msg/: manifest.l
catkin_ws/devel/share/roseus/ros/marker_msg/msg/: status.l
catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
catkin_ws/src/add_markers/src/: add_markers.cpp  marker_demo.cpp
catkin_ws/src/marker_msg/: CMakeLists.txt  package.xml
catkin_ws/src/marker_msg/msg/: status.msg
catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
catkin_ws/src/pick_objects/src/: pick_objects.cpp
catkin_ws/src/turtlebot_interactions/turtlebot_rviz_launchers/rviz/: navigation.rviz
catkin_ws/src/turtlebot_simulator/turtlebot_gazebo/launch/: amcl_demo.launch
